# dcshell

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen.sh
lib/GL/: glui.h
lib/RAPID/: RAPID.H  RAPID.lib  RAPID_private.H  RAPID_version.H  README.txt  overlap.H
lib/glpk/: glpk.lib
lib/gsl/: BINARY-NOTES.txt
lib/gsl/lib/: gslcblas.lib
lib/gsl/lib/debug/: gslcblas.lib
models/-Bar/: run
models/Bowser/: run
models/Brain/: run
models/Bulbasaur/: run
models/Bull/: run
models/Chicken/: run
models/Cow/: readme.txt  run
models/Crocodile/: run
models/Dancingchildren/: run
models/Donkeykong/: run
models/Frog/: run
models/Haechi/: run
models/Hoverbike/: run
models/Mother/: run
models/Pikachu/: run
models/Rabbit/: run
models/Rocket/: run
models/Squirtle/: run
models/Ultraman/: run
models/Vulpix/: run
models/Yoshi/: run
src/: CD3d_model.cpp  CD3d_model.h  CMakeLists.txt  cshell.cpp  cshell.h
src/gui/: CD3d_draw_GL.cpp  CD3d_draw_GL.h  CD3d_stat.cpp  CD3d_stat.h  CMakeLists.txt  dude3d_draw.cpp  dude3d_draw.h
src/gui/GL/: CMakeLists.txt  gli.cpp  gli.h  gliLight.h  shadowMap.frag  shadowMap.vert  shadowMap_glsl.cpp  shadowMap_glsl.h
src/io/: CD3d_acdparameters.h  CD3d_io.h  CD3d_msg.cpp  CD3d_msg.h  CD3dexport.cpp  CD3dexport.h  CMakeLists.txt
src/measure/: CD3d_hull.cpp  CD3d_hull.h  CD3d_hull2d.h  CMakeLists.txt  hull_vol.cpp  hull_vol.h
src/util/: CD.cpp  CD.h  CD3d_check.h  CD3d_convexity.cpp  CD3d_convexity.h  CD3d_eigen.h  CD3d_hspace_intersection.cpp  CD3d_hspace_intersection.h  CD3d_progressive_hull.cpp  CD3d_progressive_hull.h  CD3d_trim_hull.cpp  CD3d_trim_hull.h  CD3d_util.cpp  CD3d_util.h  CD3d_vsa.cpp  CD3d_vsa.h  CMakeLists.txt  gettime.h  intersection.h  svm.cpp
src/util/mathtool/: Basic.cpp  Basic.h  CMakeLists.txt  Gauss.cpp  Gauss.h  Matrix.h  Point.h  Quaternion.cpp  Quaternion.h  Vector.h
src/util/model/: ILoadable.h  IPolygonal.h  MovieBYULoader.cpp_deprecated  MovieBYULoader.h_deprecated  MovieBYUSaver.h_deprecated  objReader.h
